--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,7 +13,7 @@ resources.frontController.params.displayExceptions = 1
 resources.db.adapter = "PDO_PGSQL"
 resources.db.params.host = "localhost"
 resources.db.params.username = "postgres"
-resources.db.params.password = "postgres"
+resources.db.params.password = "umdois345"
 resources.db.params.dbname = "darthscm"
 resources.db.isDefaultTableAdapter = true
 resources.db.params.charset = "utf8"
